--- a/requirements.txt
+++ b/requirements.txt
@@ -5,14 +5,12 @@ pydantic-settings>=2.0.0
 sqlmodel>=0.0.6
 python-dotenv>=1.0.0
 python-multipart>=0.0.6
-python-jose[cryptography]>=3.3.0
-pyjwt>=2.6.0
 
 # RAG and AI dependencies
-pinecone[grpc]>=5.0.0
-langchain>=0.0.267
-langchain-pinecone>=0.2.0
-langchain-openai>=0.0.2
+pinecone[grpc]==5.1.0
+langchain==0.2.15
+langchain-pinecone==0.1.2
+langchain-openai==0.1.23
 langchain-text-splitters>=0.0.1
 openai>=0.27.8
 
