--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,11 @@ services:
       - ./logs:/app/logs
       - ./outputs:/app/outputs
       - ./static:/app/static
+      - ${COURS_DIR}:/app/cours
+      - ${DB_PATH}:/app/prod-docker.db
     environment:
       - PINECONE_API_KEY=${PINECONE_API_KEY}
       - OPENAI_API_KEY=${OPENAI_API_KEY}
+      - DB_PATH=${DB_PATH}
+      - COURS_DIR=${COURS_DIR}
     restart: unless-stopped 
