--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ pydantic-settings>=2.0.0
 sqlmodel>=0.0.6
 python-dotenv>=1.0.0
 python-multipart>=0.0.6
+yagmail>=0.15.293
 
 # RAG and AI dependencies
 pinecone[grpc]==5.1.0
